WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255862
variable-opsz-size-adjust.html (optical size) test fails
https://bugs.webkit.org/show_bug.cgi?id=255862
Summary
variable-opsz-size-adjust.html (optical size) test fails
Vitor Roriz
Reported
2023-04-24 04:14:43 PDT
Even after implementing @font-face size-adjust, the WPT testvariable-opsz-size-adjust.html still fails.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-24 04:15:13 PDT
<
rdar://problem/108447198
>
Vitor Roriz
Comment 2
2023-05-05 07:59:32 PDT
Pull request:
https://github.com/apple/WebKit/pull/579
Vitor Roriz
Comment 3
2023-05-05 08:28:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13501
EWS
Comment 4
2023-05-08 05:09:09 PDT
Committed
263795@main
(26583bfadc4b): <
https://commits.webkit.org/263795@main
> Reviewed commits have been landed. Closing PR #13501 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug