Cherry-pick 26583bfadc4b. rdar://problem/108447198

Fix variable-opsz-size-adjust.html (optical size) test fails (255862)
    https://bugs.webkit.org/show_bug.cgi?id=255862
    rdar://108447198

    Reviewed by Myles C. Maxfield.

    UnrealizedFont was getting size before size-adjust adjustment and for that
    reason size-adjust was not affecting the optical-size.

    * LayoutTests/TestExpectations:
    - Bug fixed for CoreText.

    * LayoutTests/platform/gtk/TestExpectations:
    * LayoutTests/platform/wpe/TestExpectations:
    - It still fails for FreeType, so I'm creating a separated bug.

    * Source/WebCore/platform/graphics/coretext/FontCustomPlatformDataCoreText.cpp:
    (WebCore::FontCustomPlatformData::fontPlatformData):

    Canonical link: https://commits.webkit.org/263795@main

Identifier: 263769.7@safari-7616.1.14-branch